# LLM-Based-Control-of-Robotic-Arms

./: .gitignore  README.md  upload_deepseek.sh
deepseek_arm_control/: CMakeLists.txt  README.md  README_deepseek_direct_control.md  package.xml  solution_explanation.md
deepseek_arm_control/config/: kinematics.yaml  natural_language_control_params.yaml
deepseek_arm_control/include/deepseek_arm_control/: end_effector_monitor.hpp
deepseek_arm_control/launch/: control_client_cli.launch.py  end_effector_monitor.launch.py  move_group_server.launch.py
deepseek_arm_control/scripts/: openai_api_interface.py
deepseek_arm_control/src/: arm_control_client_cli.cpp  arm_mover_server.cpp  end_effector_monitor.cpp  main.cpp  natural_language_to_arm_control.cpp
deepseek_arm_control/srv/: ControlRvizArm.srv  NaturalLanguageControl.srv
